--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "dependencies": {
-    "nodejs": "^0.0.0"
+    "nodejs": "^0.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "name": "B11223214-Lab-Pan",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:kaminzhi/B11223214-Lab-Pan.git",
   "author": "kaminzhi <issac20050710@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.10.3"
+  },
+  "scripts": {
+      "test": "env TZ='Asia/Taipei' ts-node src/index.ts"
+  }
 }
